objects/Test_Case_Execution__c.object
<CustomObject>
    <description>Test Case Execution contains brief details on Test Case along with details of tester who executed the particular Test Case.</description>
    <fields>
        <fullName>Blocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to denote that the test case execution is blocked</description>
        <label>Blocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Capability__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Global functional domain of the Test Case Execution</description>
        <label>Capability</label>
        <referenceTo>Capability__c</referenceTo>
        <relationshipLabel>Test Case Executions</relationshipLabel>
        <relationshipName>Test_Case_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completion_Status__c</fullName>
        <description>This field is helps to know how many test steps executions were passed</description>
        <label>Completion Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>😓</fullName>
                </value>
                <value>
                    <fullName>😑</fullName>
                </value>
                <value>
                    <fullName>😐</fullName>
                </value>
                <value>
                    <fullName>🙂</fullName>
                </value>
                <value>
                    <fullName>😀</fullName>
                </value>
                <value>
                    <fullName>🤩</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Input__c</fullName>
        <label>Data Input</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Data_Output__c</fullName>
        <label>Data Output</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Date_Tested__c</fullName>
        <description>Date in which the Test Case was tested</description>
        <label>Date Tested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of Test Case</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <description>The Environment in which the Test case execution is done.</description>
        <label>Environment</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>UAT</fullName>
                </value>
                <value>
                    <fullName>DEV</fullName>
                </value>
                <value>
                    <fullName>INT</fullName>
                </value>
                <value>
                    <fullName>PREPROD</fullName>
                </value>
                <value>
                    <fullName>PROD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Release version of the Test Case</description>
        <label>Release</label>
        <referenceTo>Project_Release__c</referenceTo>
        <relationshipLabel>Test Case Executions</relationshipLabel>
        <relationshipName>Test_Case_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Not Yet Executed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Test Case which is related to this Test Case Execution</description>
        <label>Test Case</label>
        <referenceTo>Test_Case__c</referenceTo>
        <relationshipLabel>Test Case Executions</relationshipLabel>
        <relationshipName>Test_Case_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Scenario__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Scenario</label>
        <referenceTo>Test_Scenario__c</referenceTo>
        <relationshipLabel>Test Case Executions</relationshipLabel>
        <relationshipName>Test_Case_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Step_Execution_Completion__c</fullName>
        <description>Displays the percentage of test step executions that have been completed successfully</description>
        <label>Test Step Execution Completion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Test_Step_Executions_Passed__c</fullName>
        <description>Displays the percentage of test step executions that have been passed successfully</description>
        <label>Test Step Executions Passed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who tested the Test Case</description>
        <label>Tester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Test_Case_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related User Stories of Test Case</description>
        <label>User Story</label>
        <referenceTo>UserStory__c</referenceTo>
        <relationshipLabel>Test Case Executions</relationshipLabel>
        <relationshipName>Test_Case_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Test Case Execution</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TCE-{0000}</displayFormat>
        <label>Test Case Execution</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Case Executions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>